Fix T52982: Join operator with context override crashes Blender 2.79